# tarit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  NOTICE  PRODUCTION_READINESS.md  README.md  SECURITY.md  SUPPORT.md  deny.toml  rustfmt.toml  task-7-report.md  task-9-report.md
orch/: .gitignore  BENCHMARK-RESULTS.md  Cargo.toml  README.md  openapi.yaml
orch/bench-results/burst_tti/: 2026-07-01T17-51-52.871Z.json  latest.json
orch/bench-results/sequential_tti/: latest.json
orch/bench-results/staggered_tti/: latest.json
orch/crates/tarit-bench/: Cargo.toml
orch/crates/tarit-bench/src/: api.rs  args.rs  main.rs  report.rs  stats.rs
orch/crates/tarit-fleet/: Cargo.toml
orch/crates/tarit-fleet/src/: lib.rs
orch/crates/tarit-store/: Cargo.toml
orch/crates/tarit-store/src/: lib.rs
orch/crates/tarit-types/: Cargo.toml
orch/crates/tarit-types/src/: lib.rs
orch/crates/tarit-vmm-client/: Cargo.toml
orch/crates/tarit-vmm-client/src/: lib.rs
orch/crates/taritd/: Cargo.toml
orch/crates/taritd/src/: api.rs  audit.rs  autoscale.rs  cli.rs  cluster.rs  config.rs  gateway.rs  image.rs  internal.rs  main.rs  metrics.rs  net.rs  openapi.rs  ops.rs  peer.rs  pty.rs  scheduler.rs  share_gateway.rs  shares.rs  ssh_keys.rs  supervisor.rs  tls.rs  usage.rs  warmpool.rs
orch/crates/taritd/src/acme/: crypto.rs  dns.rs  manager.rs  mod.rs  order.rs  resolver.rs
orch/deploy/: Caddyfile.shares.example  c8i-deploy.sh  open-api-port.sh  provision-rds.sh
orch/docs/: API.md  ARCHITECTURE.md  AUTOSCALING.md  CONFIGURATION.md  ISOLATION.md  OPERATIONS.md  ORCHESTRATOR-PRD.md  QUICKSTART.md  REPLENISHMENT.md  RESILIENCE.md  USAGE-AND-AUDIT.md
orch/scripts/: bench-vmops.sh  bench-warmpool.sh
orch/tests/: e2e_acme.sh  e2e_autoscale.sh  e2e_c8i.sh  e2e_cli.sh  e2e_cluster.sh  e2e_cpu_refill.sh  e2e_egress_recovery.sh  e2e_ha_failover.sh  e2e_image_pipeline.sh  e2e_lifecycle.sh  e2e_multitenant.sh  e2e_net_scale.sh  e2e_pg_blip.sh  e2e_shares.sh  e2e_smoke_mono.sh  e2e_snapshot_disk.sh  e2e_ssh_pty.sh  e2e_suspend_resume.sh  e2e_usage_audit.sh  e2e_warmpool_restore.sh  ha_bringup_diag.sh  net_diag.sh  pty_drive.py  run_cluster_rds.sh  ssh_pty_test.py  test_e2e_egress_recovery_socket_path.sh  test_e2e_shares_harness.sh  ws_pty_client.py
vmm/: .gitignore  Cargo.toml  README.md  e2e_api_test.sh  e2e_full_test.sh  remaining-work.md
vmm/.cargo/: config.toml
vmm/ci/: cgroup-validate.sh  check.sh  coldboot-measure.sh  diff-restore-check.sh  exec-validate.sh  full-restore-check.sh  gc-validate.sh  initramfs-test.sh  kvm-runner-bootstrap.sh  livesnap-gate.sh  net-validate.sh  perf-gates.sh  pty-validate.sh  restore-clone-validate.sh  restore-midboot.sh  restore-roundtrip.sh  smp-snapshot-validate.sh  soak.sh  suspend-validate.sh  vsock-exec-validate.sh
vmm/crates/acpi-tables/: Cargo.toml
vmm/crates/acpi-tables/src/: aml.rs  dsdt.rs  lib.rs  madt.rs  mcfg.rs  xsdt.rs
vmm/crates/vmm-api/: Cargo.toml
vmm/crates/vmm-api/src/: lib.rs  rpc.rs  types.rs
vmm/crates/vmm-core/: Cargo.toml
vmm/crates/vmm-core/src/: clone.rs  config.rs  controller.rs  cpu_template.rs  error.rs  gc.rs  guest_channel.rs  kvm.rs  lib.rs  live_snapshot.rs  oci.rs  pty_stream.rs  restore_semantics.rs  security.rs  state.rs  vcpu.rs  vcpu_setup.rs  vcpu_thread.rs  volume.rs  vsock_exec.rs  vsock_pty.rs
vmm/crates/vmm-devices/: Cargo.toml
vmm/crates/vmm-devices/src/: bus.rs  io_loop.rs  lib.rs  persist.rs  rate_limit.rs  serial.rs
vmm/crates/vmm-devices/src/virtio/: blk.rs  blk_backend.rs  blk_transport.rs  mod.rs  net.rs  net_io_loop.rs  net_transport.rs  queue.rs  regs.rs  rng.rs  rng_transport.rs  (+4 more)
vmm/crates/vmm-integration/: Cargo.toml  boot_smoke.rs  comprehensive_e2e.rs  comprehensive_prd_tests.rs  comprehensive_tests.rs  egress_denial.rs  egress_live_test.rs  lifecycle_e2e.rs  oci_boot_e2e.rs  snapshot_roundtrip.rs  test_support.rs  virtio_blk_e2e.rs  virtio_net_e2e.rs
vmm/crates/vmm-jailer/: Cargo.toml
vmm/crates/vmm-jailer/src/: cgroups.rs  executor.rs  jailer.rs  lib.rs  profile.rs  seccomp.rs
vmm/crates/vmm-loader/: Cargo.toml
vmm/crates/vmm-loader/src/: cmdline.rs  error.rs  kernel.rs  lib.rs  memmap.rs  x86_64.rs
vmm/crates/vmm-memory-backend/: Cargo.toml
vmm/crates/vmm-memory-backend/src/: backend.rs  dirty.rs  kvm.rs  kvm_dirty.rs  lib.rs  uffd.rs  uffd_restore.rs
vmm/crates/vmm-memory-backend/tests/: kvm_smoke.rs
vmm/crates/vmm-migration/: Cargo.toml
vmm/crates/vmm-migration/src/: lib.rs  negotiation.rs  state.rs  transport.rs
vmm/crates/vmm-net/: Cargo.toml
vmm/crates/vmm-net/src/: dns.rs  egress.rs  lib.rs  live_egress.rs  netns.rs  nft_compiler.rs  port_forward.rs  rate_limit.rs  tap.rs
vmm/crates/vmm-snapshot/: Cargo.toml
vmm/crates/vmm-snapshot/src/: clone.rs  crc.rs  diff.rs  format.rs  lib.rs  live.rs  restore.rs  snapshot.rs  state.rs
vmm/docs/: BUILD-AND-API.md  DESIGN-CHOICES.md  FEATURE-STATUS.md  INTEGRATION.md  METAL-BENCHMARKS.md  PERF-ANALYSIS.md  PRD-GAP-ANALYSIS.md  README.md  STANDALONE.md  VMM-PRD.md  cold-boot-bench.md  cold-boot-exec.md  full-boot-problem.md  journal.md  oci-boot-probe.md  remaining_work.md  ssh-pty.md  stress-test-results.md
vmm/docs/blog/: build-itinerary.md  building-a-minimal-rust-vmm.md
vmm/docs/journal/: 00-setup.md  01-repo-init.md  01b-vmm-reference.md  02-loader.md  03-memory.md  04-devices.md  05-vmm-core.md  06-boot-spike.md  07-block-net.md  08-isolation.md  09-snapshot.md  10-api.md  11-clones.md  12-live-snap.md  13-egress-perf.md  14-migration.md  15-aws-kvm.md  16-boot-attempt.md  17-boot-success.md  18-cli-polish.md  19-full-boot-fix.md  20-faithful-resume.md
vmm/guest/: README.md  build-minimal-kernel.sh  download-kernel.sh  install-runtime-tools.sh  kernel-builder.Dockerfile  kernel-version.env  verify-kernel-config.sh
vmm/guest/agent/: Makefile  README.md  bake-agent.sh  vmm-agent.c
vmm/guest/configs/: minimal-x86_64.config
vmm/membench/: LIVESNAP-MEMBENCH.md  livesnap-membench.sh
vmm/src/: Cargo.toml  kernel_install.rs  main.rs
(+25 files in other folders)
