[workspace]
resolver = "2"
members = [
    "crates/acpi-tables",
    "crates/vmm-core",
    "crates/vmm-memory-backend",
    "crates/vmm-loader",
    "crates/vmm-devices",
    "crates/vmm-snapshot",
    "crates/vmm-net",
    "crates/vmm-jailer",
    "crates/vmm-migration",
    "crates/vmm-api",
    "crates/vmm-integration",
    "src",
]
default-members = ["src"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
license = "AGPL-3.0-or-later"
authors = ["VMM Builder"]
description = "A minimal rust-vmm-based microVM manager for x86_64 Linux."

[workspace.dependencies]
# Curated rust-vmm crate versions (pin to a single compatible set)
kvm-bindings = { version = "0.10", features = ["fam-wrappers", "serde"] }
kvm-ioctls = "0.19"
vm-memory = { version = "0.18", features = ["backend-mmap", "backend-atomic"] }
linux-loader = "0.14"
virtio-queue = "0.17"
virtio-devices = "0.1"
virtio-bindings = "0.2"
vm-device = "0.1"
vm-allocator = "0.1"
vm-superio = "0.8"
event-manager = "0.4"
seccompiler = "0.4"
vmm-sys-util = "0.12"
# supporting libs
log = "0.4"
env_logger = "0.11"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["sched", "process", "fs", "user", "mount", "signal"] }
postcard = { version = "1", default-features = false, features = ["use-std"] }
crc32fast = "1"
zerocopy = { version = "0.8.48", features = ["derive"] }
tempfile = "3"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = 0 }
suspicious = { level = "deny", priority = 0 }
perf = { level = "warn", priority = 0 }
