[package]
name = "tarit-bench"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tarit-bench"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
