[package]
name = "taritd"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "taritd"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
futures-util = { workspace = true }
hmac = { workspace = true }
tarit-fleet = { path = "../tarit-fleet" }
tarit-store = { path = "../tarit-store" }
tarit-types = { path = "../tarit-types" }
tarit-vmm-client = { path = "../tarit-vmm-client" }
reqwest = { workspace = true }
russh = { version = "0.61", default-features = false, features = ["aws-lc-rs", "flate2"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
