[package]
name = "taritd"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "taritd"
path = "src/main.rs"

[dependencies]
arc-swap = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
aws-config = { workspace = true }
aws-sdk-route53 = { workspace = true }
base64 = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
futures-util = { workspace = true }
hmac = { workspace = true }
hickory-resolver = { workspace = true }
hyper-util = { workspace = true }
idna = { workspace = true }
instant-acme = { workspace = true }
ipnet = { workspace = true }
rcgen = { workspace = true }
rand = "0.9"
rustls = { workspace = true }
tarit-fleet = { path = "../tarit-fleet" }
tarit-store = { path = "../tarit-store" }
tarit-types = { path = "../tarit-types" }
tarit-vmm-client = { path = "../tarit-vmm-client" }
reqwest = { workspace = true }
russh = { version = "0.61", default-features = false, features = ["aws-lc-rs", "flate2"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
aws-smithy-runtime = { workspace = true }
aws-smithy-types = { workspace = true }
hex = "0.4"
tower = { version = "0.5", features = ["util"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
