[package]
name = "vmm-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
boot = ["vmm-core/boot"]

[dependencies]
tarit-proto = { path = "../../../proto" }
vmm-core = { path = "../vmm-core" }
vmm-net = { path = "../vmm-net" }
thiserror.workspace = true
log.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
