[package]
name = "vmm-jailer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
log.workspace = true
serde.workspace = true
libc.workspace = true
nix.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
