[package]
name = "vmm-snapshot"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
vmm-devices = { path = "../vmm-devices" }
vmm-memory-backend = { path = "../vmm-memory-backend" }
vm-memory.workspace = true
vmm-sys-util.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
crc32fast.workspace = true

[lints]
workspace = true
